// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoggingConfigurationForm renders a loading spinner 1`] = `
<div>
  <main
    class="nx-page-main nxrm-logging-configuration"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-scroll fa-w-20 nx-page-title__page-icon nx-icon"
            data-icon="scroll"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 0C21.53 0 0 21.53 0 48v64c0 8.84 7.16 16 16 16h80V48C96 21.53 74.47 0 48 0zm208 412.57V352h288V96c0-52.94-43.06-96-96-96H111.59C121.74 13.41 128 29.92 128 48v368c0 38.87 34.65 69.65 74.75 63.12C234.22 474 256 444.46 256 412.57zM288 384v32c0 52.93-43.06 96-96 96h336c61.86 0 112-50.14 112-112 0-8.84-7.16-16-16-16H288z"
              fill="currentColor"
            />
          </svg>
          <span>
            Logging
          </span>
        </h1>
        <p
          class="nx-page-title__description nx-feature-description"
        >
          Control logging levels
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile nxrm-logging-configuration-form"
      >
        <div
          class="nx-tile-content"
        >
          <div
            class="nx-loading-spinner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-notch fa-w-16 fa-spin nx-loading-spinner__icon nx-icon"
              data-icon="circle-notch"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
                fill="currentColor"
              />
            </svg>
            <span>
              Loading…
            </span>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`LoggingConfigurationForm renders the resolved data 1`] = `
<div>
  <main
    class="nx-page-main nxrm-logging-configuration"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-scroll fa-w-20 nx-page-title__page-icon nx-icon"
            data-icon="scroll"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 0C21.53 0 0 21.53 0 48v64c0 8.84 7.16 16 16 16h80V48C96 21.53 74.47 0 48 0zm208 412.57V352h288V96c0-52.94-43.06-96-96-96H111.59C121.74 13.41 128 29.92 128 48v368c0 38.87 34.65 69.65 74.75 63.12C234.22 474 256 444.46 256 412.57zM288 384v32c0 52.93-43.06 96-96 96h336c61.86 0 112-50.14 112-112 0-8.84-7.16-16-16-16H288z"
              fill="currentColor"
            />
          </svg>
          <span>
            Logging
          </span>
        </h1>
        <p
          class="nx-page-title__description nx-feature-description"
        >
          Control logging levels
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile nxrm-logging-configuration-form"
      >
        <div
          class="nx-tile-content"
        >
          <form
            class="nx-form"
          >
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="name"
              >
                <span
                  class="nx-label__text"
                >
                  Logger Name
                </span>
              </label>
              <div
                class="nx-text-input nx-text-input--long pristine disabled"
              >
                <div
                  class="nx-text-input__box"
                >
                  <input
                    aria-errormessage="nx-text-input-invalid-message-00000000"
                    aria-invalid="false"
                    class="nx-text-input__input"
                    disabled=""
                    id="name"
                    name="name"
                    type="text"
                    value="ROOT"
                  />
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                    data-icon="exclamation-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nx-text-input__invalid-message"
                  id="nx-text-input-invalid-message-00000000"
                  role="alert"
                />
              </div>
            </div>
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="nx-form-group-child-11111111"
              >
                <span
                  class="nx-label__text"
                >
                  Logger Level
                </span>
              </label>
              <div
                class="nxrm-select"
              >
                <select
                  aria-describedby=""
                  class="nx-form-select"
                  id="nx-form-group-child-11111111"
                  name="level"
                >
                  <option
                    value="OFF"
                  >
                    OFF
                  </option>
                  <option
                    value="ERROR"
                  >
                    ERROR
                  </option>
                  <option
                    value="WARN"
                  >
                    WARN
                  </option>
                  <option
                    value="INFO"
                  >
                    INFO
                  </option>
                  <option
                    value="DEBUG"
                  >
                    DEBUG
                  </option>
                  <option
                    value="TRACE"
                  >
                    TRACE
                  </option>
                </select>
              </div>
            </div>
            <footer
              class="nx-footer"
            >
              <div
                class="nx-btn-bar"
              >
                <button
                  class="nx-btn nx-btn--error"
                >
                  Reset to Default Level
                </button>
                <button
                  class="nx-form__cancel-btn nx-btn nx-btn--secondary"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  aria-disabled="true"
                  aria-label="There are no changes"
                  class="nx-form__submit-btn disabled nx-btn nx-btn--primary"
                  title="There are no changes"
                >
                  Save
                </button>
              </div>
            </footer>
          </form>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`LoggingConfigurationForm requires the name field when creating a new logging configuration 1`] = `
<div>
  <main
    class="nx-page-main nxrm-logging-configuration"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-scroll fa-w-20 nx-page-title__page-icon nx-icon"
            data-icon="scroll"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 0C21.53 0 0 21.53 0 48v64c0 8.84 7.16 16 16 16h80V48C96 21.53 74.47 0 48 0zm208 412.57V352h288V96c0-52.94-43.06-96-96-96H111.59C121.74 13.41 128 29.92 128 48v368c0 38.87 34.65 69.65 74.75 63.12C234.22 474 256 444.46 256 412.57zM288 384v32c0 52.93-43.06 96-96 96h336c61.86 0 112-50.14 112-112 0-8.84-7.16-16-16-16H288z"
              fill="currentColor"
            />
          </svg>
          <span>
            Logging
          </span>
        </h1>
        <p
          class="nx-page-title__description nx-feature-description"
        >
          Control logging levels
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile nxrm-logging-configuration-form"
      >
        <div
          class="nx-tile-content"
        >
          <form
            class="nx-form"
          >
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="name"
              >
                <span
                  class="nx-label__text"
                >
                  Logger Name
                </span>
              </label>
              <div
                class="nx-text-input nx-text-input--long pristine"
              >
                <div
                  class="nx-text-input__box"
                >
                  <input
                    aria-errormessage="nx-text-input-invalid-message-22222222"
                    aria-invalid="false"
                    class="nx-text-input__input"
                    id="name"
                    name="name"
                    type="text"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                    data-icon="check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                    data-icon="exclamation-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nx-text-input__invalid-message"
                  id="nx-text-input-invalid-message-22222222"
                  role="alert"
                />
              </div>
            </div>
            <div
              class="nx-form-group"
            >
              <label
                class="nx-label"
                for="nx-form-group-child-33333333"
              >
                <span
                  class="nx-label__text"
                >
                  Logger Level
                </span>
              </label>
              <div
                class="nxrm-select"
              >
                <select
                  aria-describedby=""
                  class="nx-form-select"
                  id="nx-form-group-child-33333333"
                  name="level"
                >
                  <option
                    value="OFF"
                  >
                    OFF
                  </option>
                  <option
                    value="ERROR"
                  >
                    ERROR
                  </option>
                  <option
                    value="WARN"
                  >
                    WARN
                  </option>
                  <option
                    value="INFO"
                  >
                    INFO
                  </option>
                  <option
                    value="DEBUG"
                  >
                    DEBUG
                  </option>
                  <option
                    value="TRACE"
                  >
                    TRACE
                  </option>
                </select>
              </div>
            </div>
            <footer
              class="nx-footer"
            >
              <div
                class="nx-btn-bar"
              >
                <button
                  class="nx-form__cancel-btn nx-btn nx-btn--secondary"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  aria-disabled="true"
                  aria-label="There are no changes"
                  class="nx-form__submit-btn disabled nx-btn nx-btn--primary"
                  title="There are no changes"
                >
                  Save
                </button>
              </div>
            </footer>
          </form>
        </div>
      </div>
    </div>
  </main>
</div>
`;
